<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_vibrant_dark_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundTwo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundTextTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_vibrant_color_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundThree"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundTextThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_muted_dark_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundFour"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundTextFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_muted_light_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundFive"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundTextFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_vibrant_color_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundSix"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backgroundTextSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_muted_color_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>